# Stock-System

./: .gitignore  README.md  install.sh  requirements.txt  setup.cfg
.github/workflows/: ci.yml
data/: sample.csv
src/: __init__.py  alerting.py  app.py  backtester.py  fund_fetcher.py  mops_fetcher.py  ta_indicators.py
tests/: test_alerting.py  test_backtester.py  test_indicators.py
