[metadata]
name = tw_stock_project
version = 0.1.0
description = Taiwan stock analysis project
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    requests
    streamlit
    ta
    pytest
    beautifulsoup4

include_package_data = True
