[metadata]
name = tw_stock_project
version = 0.1.0
description = Taiwan stock analysis project
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numpy
    requests
    streamlit
    ta
    pytest
    beautifulsoup4

include_package_data = True

[metadata]
author = Peter JH Yang
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
